[package]
name = "cartography"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2021"
description = """
Cartography game server.
"""
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["ws"] }
clap = { version = "4.5.58", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["error", "display"] }
futures = "0.3.31"
futures-rx = "0.2.1"
json-patch = { version = "4.1.0", features = ["utoipa"] }
kameo = "0.19.2"
rand = { version = "0.10.0", features = ["alloc"] }
rmp-serde = "1.3.1"
scalar_api_reference = { version = "0.1.0", features = ["axum"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "time"] }
time = { version = "0.3.47", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["time"] }
uuid = { version = "1.20.0", features = ["serde", "v7"] }
